# drift

./: .gitattributes  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  COVERAGE.md  PLAN-v0.4.0.md  PLAN.md  PROJECT.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/drift-check/: action.yml
.github/hooks/: pre-commit
.github/workflows/: ci.yml
docs/: cli.md  configuration.md  extractors.md  index.md  plugins.md  pre-commit.md
examples/: github-actions.yml
knowledge/: learnings.md
memory/: 2026-04-03.md
schemas/: drift-report.schema.json
src/drift/: __init__.py  __main__.py  baseline.py  cli.py  config.py  extractor_js.py  git_utils.py  matcher.py  models.py  plugin.py  python_extractor.py  reporter.py  scanner.py
src/drift/extractors/: __init__.py  base.py  cli_argparse.py  cli_click.py  cli_typer.py  config_file.py  dataclass_fields.py  decorators.py  deprecated.py  django_urls.py  dockerfile.py  docstring.py  dotenv.py  env_vars.py  go.py  (+20 more)
tests/: __init__.py  generate_fixtures.py  test_baseline.py  test_cli.py  test_cli_click.py  test_confidence.py  test_config.py  test_coverage_pass.py  test_diff_output.py  test_diff_ref_baseline.py  test_docstring_extractor.py  test_e2e.py  test_extractor_config.py  test_extractor_js.py  test_extractor_metadata.py  test_fixtures_generator.py  test_generate_feed.py  test_git_diff.py  test_matcher.py  test_models.py  test_multi_path.py  test_plugin.py  test_python_extractor.py  test_registry.py  test_reporter.py  test_scanner.py  test_signals.py  test_typescript_matching.py  test_watch.py
tests/fixtures/: generated_markdown.md  generated_markdown.md.expected.json  generated_python.py  generated_python.py.expected.json  generated_typescript.ts  generated_typescript.ts.expected.json  sample.go  sample.kt  sample.rs  sample.swift  sample_Dockerfile  sample_argparse.py  sample_click.py  sample_config.toml  sample_config.yaml  sample_dataclasses.py  sample_decorators.py  sample_deprecated.py  sample_django_urls.py  sample_docs.rst  sample_env_vars.py  sample_fastapi.py  sample_flask.py  sample_go.mod  sample_jsdoc.js  sample_makefile.mk  sample_openapi.yaml  sample_protocols.py  sample_pyproject.toml  sample_readme.md  sample_rst.rst  sample_rustfmt.toml  sample_schema.graphql  sample_settings.py  sample_sqlalchemy.py  sample_terraform.tf  sample_typer.py  sample_typescript.ts  sample_typescript_docs.md
tests/test_extractors/: __init__.py  test_cli_argparse.py  test_cli_typer.py  test_config_file.py  test_dataclass_fields.py  test_decorators.py  test_deprecated.py  test_django_urls.py  test_dockerfile.py  test_dotenv.py  test_env_vars.py  test_fastapi_routes.py  test_flask_routes.py  test_go.py  test_go_mod.py  test_graphql.py  test_kotlin.py  test_makefile.py  test_markdown.py  test_openapi.py  test_protocols.py  test_pydantic.py  test_pyproject.py  test_registry.py  test_rst_docs.py  test_rust.py  test_rustfmt_config.py  test_sqlalchemy.py  test_swift.py  test_terraform.py  test_typescript.py  test_yaml_config.py
tests/test_reporters/: test_github_pr.py  test_github_summary.py
(+4 files in other folders)
