[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drift"
version = "0.1.0"
description = "Detect when your documentation no longer matches your code"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["documentation", "static-analysis", "developer-tools", "cli"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
drift = "drift.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/drift"]

[tool.pytest.ini_options]
testpaths = ["tests"]
