[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drift"
version = "0.5.0-dev"
description = "Detect when your documentation no longer matches your code"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["documentation", "static-analysis", "developer-tools", "cli"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "python-hcl2>=4.3.0",
]

[project.scripts]
drift = "drift.cli:main"

[project.entry-points."drift.extractors"]
# Third-party plugins should add their extractors here.
# Example:
# my-extractor = "my_drift_plugin:MyExtractor"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "responses>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/drift"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH"]
ignore = ["E501", "N806"]

[tool.coverage.run]
source = ["src/drift"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/mypy_cache/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
show_error_codes = true
pretty = true
show_column_numbers = true
show_error_context = true

